# dldt

./: .gitmodules  CMakeLists.txt  CODEOWNERS
cmake/: dependencies.cmake  features.cmake  ie_parallel.cmake  vpu_dependencies.cmake
cmake/developer_package/: IEDevScriptsConfig.cmake  version.cmake
cmake/developer_package/download/: dependency_solver.cmake
cmake/templates/: InferenceEngineDeveloperPackageConfig.cmake.in
docs/IE_PLUGIN_DG/: Building.md
docs/onnx_custom_op/: CMakeLists.txt
docs/template_extension/: CMakeLists.txt
docs/template_plugin/: CMakeLists.txt
docs/template_plugin/include/template/: template_config.hpp
docs/template_plugin/src/: CMakeLists.txt  template_infer_request.cpp
inference-engine/: CMakeLists.txt
inference-engine/ie_bridges/c/samples/: CMakeLists.txt
inference-engine/ie_bridges/python/wheel/: .env
inference-engine/src/auto_plugin/: auto_plugin.cpp
inference-engine/src/cldnn_engine/: CMakeLists.txt
inference-engine/src/gna_plugin/: CMakeLists.txt
inference-engine/src/inference_engine/: CMakeLists.txt  ie_core.cpp
inference-engine/src/readers/ir_reader_v7/: CMakeLists.txt
inference-engine/src/vpu/graph_transformer/: CMakeLists.txt
inference-engine/tests/: CMakeLists.txt
inference-engine/tests/functional/inference_engine/: CMakeLists.txt
inference-engine/tests/unit/cpu/: CMakeLists.txt
inference-engine/tests/unit/vpu/: CMakeLists.txt
inference-engine/tests_deprecated/behavior/shared_tests/: CMakeLists.txt
inference-engine/tests_deprecated/behavior/vpu/: CMakeLists.txt
inference-engine/tests_deprecated/functional/vpu/: CMakeLists.txt
inference-engine/tests_deprecated/unit/: CMakeLists.txt
ngraph/: CMakeLists.txt
ngraph/core/include/ngraph/runtime/: host_tensor.hpp  tensor.hpp
ngraph/test/: CMakeLists.txt
ngraph/test/conditional_compilation/: ngraph_cc_collect.cpp
ngraph/test/util/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/bindings/: CMakeLists.txt
runtime/bindings/c/samples/hello_nv12_input_classification/: main.c
runtime/bindings/c/tests/: ie_c_api_test.cpp
runtime/bindings/python_ie/: CMakeLists.txt  README.md
runtime/bindings/python_ie/src/openvino/inference_engine/: CMakeLists.txt
runtime/bindings/python_ngraph/: CMakeLists.txt  setup.py
runtime/bindings/python_ngraph/tests/mock/mock_py_ngraph_frontend/: CMakeLists.txt
runtime/core/: CMakeLists.txt
runtime/core/inference_engine/: CMakeLists.txt
runtime/core/inference_engine/src/: CMakeLists.txt
runtime/core/inference_engine/tests/: CMakeLists.txt  blob_copy_test.cpp  ngraph_reshape_tests.cpp
runtime/core/inference_engine/tests/ngraph_reader/: network_utils.cpp
runtime/core/inference_engine/tests/transformations/: convert_reduce_to_pooling_test.cpp  convert_scatter_elements_to_scatter_test.cpp
runtime/core/inference_engine/unit-tests/: ie_blob_test.cpp
runtime/core/legacy_api/: CMakeLists.txt
runtime/core/ngraph/: CMakeLists.txt
runtime/core/ngraph/tests/: CMakeLists.txt
runtime/core/ngraph/tests/conditional_compilation/: ngraph_cc_off.cpp  ngraph_cc_on.cpp
runtime/core/preprocessing/: CMakeLists.txt
runtime/core/readers/: CMakeLists.txt
runtime/core/readers/ir_reader/: CMakeLists.txt
runtime/core/readers/ir_reader_v7/: CMakeLists.txt
runtime/core/snippets/: CMakeLists.txt
runtime/frontends/: CMakeLists.txt
runtime/frontends/cmake_static_protobuf/: CMakeLists.txt
runtime/frontends/onnx_import/: CMakeLists.txt
runtime/frontends/paddlepaddle/: CMakeLists.txt
runtime/plugins/: CMakeLists.txt
runtime/plugins/cldnn_engine/: CMakeLists.txt
runtime/plugins/cldnn_engine/src/: CMakeLists.txt
runtime/plugins/cldnn_engine/tests/: CMakeLists.txt
runtime/plugins/gna_plugin/: CMakeLists.txt
runtime/plugins/gna_plugin/src/: CMakeLists.txt  gna_graph_tools.hpp
runtime/plugins/gna_plugin/src/layers/: gna_permute.hpp
runtime/plugins/gna_plugin/tests/: CMakeLists.txt
runtime/plugins/gna_plugin/tests/shared_tests_instances/single_layer_tests/: fake_quantize.cpp
runtime/plugins/gna_plugin/unit-tests/: CMakeLists.txt
runtime/plugins/mkldnn_plugin/: CMakeLists.txt
runtime/plugins/mkldnn_plugin/src/: mkldnn_dims.h
runtime/plugins/mkldnn_plugin/tests/: CMakeLists.txt
runtime/plugins/mkldnn_plugin/tests/single_layer_tests/: group_convolution_backprop_data.cpp  interpolate.cpp
runtime/plugins/mkldnn_plugin/unit-tests/: CMakeLists.txt
runtime/plugins/vpu/: CMakeLists.txt
runtime/plugins/vpu/graph_transformer/: CMakeLists.txt
runtime/plugins/vpu/src/: CMakeLists.txt
runtime/plugins/vpu/src/graph_transformer/: CMakeLists.txt
runtime/plugins/vpu/src/myriad_plugin/: CMakeLists.txt
runtime/plugins/vpu/tests/: CMakeLists.txt
runtime/plugins/vpu/unit-tests/: CMakeLists.txt
runtime/plugins/vpu/unit-tests/base/: graph_transformer_tests.cpp
runtime/tests/: CMakeLists.txt
runtime/tests/common_test_utils/: CMakeLists.txt
runtime/tests/plugin_func_tests/conformance/subgraphs_dumper/tests/: CMakeLists.txt
runtime/tests/plugin_func_tests/shared/src/execution_graph_tests/: unique_node_names.cpp
runtime/tests/shared_test_classes/src/single_layer/: psroi_pooling.cpp
samples/: CMakeLists.txt
samples/hello_reshape_ssd/: CMakeLists.txt
scripts/: CMakeLists.txt
tests/: CMakeLists.txt
tests/ci_tests/stress_tests/memcheck_tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt
tests/functional/plugin/: CMakeLists.txt
tests/functional/plugin/cpu/: CMakeLists.txt
tests/ie_test_utils/: CMakeLists.txt
tests/ie_test_utils/ngraph_functions/: CMakeLists.txt
tests/ngraph-test/: CMakeLists.txt  util.cpp
tests/ngraph-test/runtime/: CMakeLists.txt
tests/tests_deprecated/: CMakeLists.txt
tests/tests_deprecated/helpers/: CMakeLists.txt
tests/tests_deprecated/unit/: CMakeLists.txt
tools/: CMakeLists.txt
tools/benchmark/: CMakeLists.txt
tools/compile_tool/: CMakeLists.txt
tools/model-optimizer/: CMakeLists.txt  version.txt
tools/vpu/vpu_compile/: CMakeLists.txt
tools/vpu/vpu_perfcheck/: CMakeLists.txt
(+33 files in other folders)
